force-app/main/default/objects/Regimen__c/Regimen__c.object-meta.xml
<CustomObject>
    <label>Regimen</label>
    <nameField>
        <displayFormat>R-{000000000}</displayFormat>
        <label>Regimen Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regimens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>