force-app/main/default/objects/Regimen__c/fields/ApprovedBy__c.field-meta.xml
<CustomField>
    <fullName>ApprovedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>AbbottPartner__c</referenceTo>
    <relationshipLabel>Regimens (Approved By)</relationshipLabel>
    <relationshipName>Regimens1</relationshipName>
    <type>Lookup</type>
</CustomField>