force-app/main/default/objects/Regimen__c/fields/CancellationReason__c.field-meta.xml
<CustomField>
    <fullName>CancellationReason__c</fullName>
    <label>Cancellation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>