force-app/main/default/objects/Regimen__c/fields/CancelledBy__c.field-meta.xml
<CustomField>
    <fullName>CancelledBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancelled By</label>
    <referenceTo>AbbottPartner__c</referenceTo>
    <relationshipLabel>Regimens (Cancelled By)</relationshipLabel>
    <relationshipName>Regimens2</relationshipName>
    <type>Lookup</type>
</CustomField>