force-app/main/default/objects/Regimen__c/fields/CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By</label>
    <referenceTo>AbbottPartner__c</referenceTo>
    <relationshipLabel>Regimens (Created By)</relationshipLabel>
    <relationshipName>Regimens</relationshipName>
    <type>Lookup</type>
</CustomField>