force-app/main/default/objects/Regimen__c/fields/CreatedByName__c.field-meta.xml
<CustomField>
    <fullName>CreatedByName__c</fullName>
    <formula>CreatedBy__r.PartnerName__c</formula>
    <label>Created By Name</label>
    <type>Text</type>
</CustomField>