force-app/main/default/objects/Regimen__c/fields/DeliveryNote__c.field-meta.xml
<CustomField>
    <fullName>DeliveryNote__c</fullName>
    <label>Delivery Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>