force-app/main/default/objects/Regimen__c/fields/DisableClientNotifications__c.field-meta.xml
<CustomField>
    <fullName>DisableClientNotifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Client Notifications</label>
    <type>Checkbox</type>
</CustomField>