force-app/main/default/objects/Regimen__c/fields/FirstOrderFree__c.field-meta.xml
<CustomField>
    <fullName>FirstOrderFree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Order Free</label>
    <type>Checkbox</type>
</CustomField>