force-app/main/default/objects/Regimen__c/fields/Institution__c.field-meta.xml
<CustomField>
    <fullName>Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Institution</label>
    <referenceTo>Institution__c</referenceTo>
    <relationshipLabel>Regimens</relationshipLabel>
    <relationshipName>Regimens</relationshipName>
    <type>Lookup</type>
</CustomField>