force-app/main/default/objects/Regimen__c/fields/InstitutionName__c.field-meta.xml
<CustomField>
    <fullName>InstitutionName__c</fullName>
    <formula>Institution__r.Name__c</formula>
    <label>Institution Name</label>
    <type>Text</type>
</CustomField>