force-app/main/default/objects/Regimen__c/fields/LatestPurchaseOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>LatestPurchaseOrderNumber__c</fullName>
    <label>Latest Purchase Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>