force-app/main/default/objects/Regimen__c/fields/NextOrderRescheduledDueToPH__c.field-meta.xml
<CustomField>
    <fullName>NextOrderRescheduledDueToPH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Next Order Rescheduled Due To PH</label>
    <type>Checkbox</type>
</CustomField>