force-app/main/default/objects/Regimen__c/fields/NotificationStatus__c.field-meta.xml
<CustomField>
    <fullName>NotificationStatus__c</fullName>
    <label>Notification Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>