force-app/main/default/objects/Regimen__c/fields/PaymentRule__c.field-meta.xml
<CustomField>
    <fullName>PaymentRule__c</fullName>
    <label>Payment Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Institution Pay</fullName>
            </value>
            <value>
                <fullName>Co Pay</fullName>
            </value>
            <value>
                <fullName>Client Pay</fullName>
            </value>
            <value>
                <fullName>All Orders Free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>