force-app/main/default/objects/Regimen__c/fields/RegimenNotes__c.field-meta.xml
<CustomField>
    <fullName>RegimenNotes__c</fullName>
    <label>Regimen Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>