force-app/main/default/objects/Regimen__c/fields/RegimenStatus__c.field-meta.xml
<CustomField>
    <fullName>RegimenStatus__c</fullName>
    <label>Regimen Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>