force-app/main/default/objects/Regimen__c/fields/RequestedNextOrderDate__c.field-meta.xml
<CustomField>
    <fullName>RequestedNextOrderDate__c</fullName>
    <label>Requested Next Order Date</label>
    <type>Date</type>
</CustomField>