force-app/main/default/objects/Regimen__c/fields/Workplace__c.field-meta.xml
<CustomField>
    <fullName>Workplace__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Workplace</label>
    <referenceTo>AbbottWorkplace__c</referenceTo>
    <relationshipLabel>Regimens</relationshipLabel>
    <relationshipName>Regimens</relationshipName>
    <type>Lookup</type>
</CustomField>